--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  overflow-x: hidden;
+}
+.film {
+  max-width: 300px;
+  cursor: pointer;
+}
+.film img {
+  width: 100%;
+}
+.film img:hover {
+  scale: 1.02;
+}
+.movie-detail {
+  display: flex;
+  height: 96vh;
+  align-items: center;
+  justify-content: center;
+  padding: 50px;
+}
+.movie-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 80%;
 }
